[gd_scene load_steps=2 format=3 uid="uid://bchmf63lokq5b"]

[ext_resource type="Script" path="res://Environment/pause_menu.gd" id="1_fv8g5"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_fv8g5")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="PausePanel"]
layout_mode = 2
anchor_left = 0.25
anchor_top = 0.592593
anchor_right = 0.805556
anchor_bottom = 0.691358
text = "Resume
"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="PausePanel"]
layout_mode = 2
anchor_left = 0.25
anchor_top = 0.790123
anchor_right = 0.805556
anchor_bottom = 0.888889
text = "Exit Game"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PausePanel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/Quit" to="." method="_on_quit_pressed"]
